<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="username"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="password"
            app:title="@string/pwd" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <ListPreference
            app:defaultValue="标准"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="fontSize"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="orientation"
            app:title="@string/sync_title" />


    </PreferenceCategory>

    <PreferenceCategory app:title="关于">


        <PreferenceScreen
            app:title="软件版本"
            app:summary="0.8">
        </PreferenceScreen>

        <PreferenceScreen
            app:title="系统名称"
            app:summary="学生信息管理系统">
        </PreferenceScreen>

        <PreferenceScreen
            app:title="附加功能1"
            app:summary="号码归属地查询">
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
