<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".FragmentStudent">
        <TextView
            android:id="@+id/textViewStudentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal"
            android:text="@string/textIn"
            android:textColor="@color/colorAccent"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/linearLayoutName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStudentTitle">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"></TextView>

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="输入姓名..."
                android:singleLine="true"
                android:textColor="@color/purple"></EditText>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/linearLayoutNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutName">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/number"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"></TextView>

            <EditText
                android:id="@+id/stuNumberEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="输入学号..."
                android:singleLine="true"
                android:textColor="@color/purple"></EditText>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/linearLayoutSex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutNumber">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sex"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"></TextView>

            <RadioGroup
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonM"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="男"
                    android:textColor="@color/purple" />

                <RadioButton
                    android:id="@+id/radioButtonF"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="女"
                    android:textColor="@color/purple" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/linearLayoutSchool"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutSex">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/school"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"></TextView>

            <Spinner
                android:id="@+id/spinnerSchool"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/linearLayoutMajor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutSchool">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/major"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"></TextView>

            <Spinner
                android:id="@+id/spinnerMajor"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/linearLayoutHobby"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutMajor">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hobby"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"></TextView>

            <LinearLayout
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/linearLayoutCheck"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutMajor">

                <CheckBox
                    android:id="@+id/check1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="文学"
                    android:textColor="@color/purple"></CheckBox>

                <CheckBox
                    android:id="@+id/check2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="体育"
                    android:textColor="@color/purple"></CheckBox>

                <CheckBox
                    android:id="@+id/check3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="音乐"
                    android:textColor="@color/purple"></CheckBox>

                <CheckBox
                    android:id="@+id/check4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="美术"
                    android:textColor="@color/purple"></CheckBox>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/linearLayoutBirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutHobby">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/birth"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"></TextView>

            <EditText
                android:id="@+id/birthEdit"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:editable="false"
                android:hint="选择生日..."
                android:onClick="onBirthPick"
                android:singleLine="true"
                android:textColor="@color/purple"></EditText>

        </LinearLayout>

        <!-- 个性签名 -->
        <LinearLayout
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/linearLayoutSignature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutBirth">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/signature"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"></TextView>

            <EditText
                android:id="@+id/signatureEdit"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:maxLines="6"
                android:scrollbars="vertical"
                android:hint="填写个性签名..."
                android:singleLine="true"
                android:textColor="@color/purple"></EditText>

        </LinearLayout>

        <!-- 个性签名控制按钮 -->
        <LinearLayout
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/linearLayoutSignatureControl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutSignature">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="粘贴"
                android:layout_weight="1"
                android:onClick="onPaste"
                ></Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="文件读取"
                android:layout_weight="1"
                android:onClick="onPasteByFile"
                ></Button>
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:onClick="onSaveFragment"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutSignatureControl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>